I have fixed a few bugs in multiple translations, 'po/Makefile.am', & 'data/Makefile.am'.  They where still looking for 'twitux.desktop.in.in' I just pointed them at 'twitux.desktop.in'.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,6 +1,6 @@
 desktopdir 	 = $(datadir)/applications
-desktop_in_files = twitux.desktop.in.in
-desktop_DATA 	 = $(desktop_in_files:.desktop.in.in=.desktop)
+desktop_in_files = twitux.desktop.in
+desktop_DATA 	 = $(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
 
 schemasdir	 = $(GCONF_SCHEMA_FILE_DIR)
