I have finished some changes to './configure' to improve Twitux build process.  Now 'po/Makefile.in.in' and 'data/twitux.desktop.in.in' are officially depricated.  I hope I can add Twitux svn as a remote git repo soon but until then all of my commits are going here.

--- a/src/Makefile
+++ b/src/Makefile
@@ -90,13 +90,13 @@ DIST_SOURCES = $(am__twitux_SOURCES_DIST)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /programs/src/twitux/missing --run aclocal-1.10
+ACLOCAL = ${SHELL} /projects/gtk/twitux/missing --run aclocal-1.10
 ALL_LINGUAS = 
-AMTAR = ${SHELL} /programs/src/twitux/missing --run tar
+AMTAR = ${SHELL} /projects/gtk/twitux/missing --run tar
 AR = ar
-AUTOCONF = ${SHELL} /programs/src/twitux/missing --run autoconf
-AUTOHEADER = ${SHELL} /programs/src/twitux/missing --run autoheader
-AUTOMAKE = ${SHELL} /programs/src/twitux/missing --run automake-1.10
+AUTOCONF = ${SHELL} /projects/gtk/twitux/missing --run autoconf
+AUTOHEADER = ${SHELL} /projects/gtk/twitux/missing --run autoheader
+AUTOMAKE = ${SHELL} /projects/gtk/twitux/missing --run automake-1.10
 AWK = gawk
 CATALOGS = 
 CATOBJEXT = .gmo
@@ -179,11 +179,11 @@ LIBOBJS =
 LIBS = 
 LIBTOOL = $(SHELL) $(top_builddir)/libtool
 LIBTWITUX_CFLAGS = -DORBIT2=1 -pthread -I/usr/include/libxml2 -I/usr/include/glib-2.0 -I/usr/lib64/glib-2.0/include -I/usr/include/gtk-2.0 -I/usr/lib64/gtk-2.0/include -I/usr/include/atk-1.0 -I/usr/include/cairo -I/usr/include/pango-1.0 -I/usr/include/pixman-1 -I/usr/include/freetype2 -I/usr/include/libpng12 -I/usr/include/gconf/2 -I/usr/include/orbit-2.0 -I/usr/include/dbus-1.0 -I/usr/lib64/dbus-1.0/include -I/usr/include/gnome-keyring-1  
-LIBTWITUX_LIBS = -lxml2 -lgtk-x11-2.0 -lgdk-x11-2.0 -latk-1.0 -lgio-2.0 -lpangoft2-1.0 -lgdk_pixbuf-2.0 -lpangocairo-1.0 -lcairo -lpango-1.0 -lfreetype2 -lz -lfontconfig -lgmodule-2.0 -lgobject-2.0 -lgconf-2 -lgnome-keyring -lglib-2.0  
+LIBTWITUX_LIBS = -lxml2 -lgtk-x11-2.0 -lgdk-x11-2.0 -latk-1.0 -lgio-2.0 -lpangoft2-1.0 -lgdk_pixbuf-2.0 -lpangocairo-1.0 -lcairo -lpango-1.0 -lfreetype -lz -lfontconfig -lgmodule-2.0 -lgobject-2.0 -lgconf-2 -lgnome-keyring -lglib-2.0  
 LN_S = ln -s
 LTLIBOBJS = 
 MAINT = #
-MAKEINFO = ${SHELL} /programs/src/twitux/missing --run makeinfo
+MAKEINFO = ${SHELL} /projects/gtk/twitux/missing --run makeinfo
 MKDIR_P = /bin/mkdir -p
 MSGFMT = /usr/bin/msgfmt
 MSGFMT_OPTS = -c
@@ -209,16 +209,16 @@ SET_MAKE =
 SHELL = /bin/sh
 STRIP = strip
 TWITUX_CFLAGS = -D_REENTRANT -I/usr/include/pango-1.0 -I/usr/include/glib-2.0 -I/usr/lib64/glib-2.0/include -I/usr/include/gtk-2.0 -I/usr/lib64/gtk-2.0/include -I/usr/include/atk-1.0 -I/usr/include/cairo -I/usr/include/pixman-1 -I/usr/include/freetype2 -I/usr/include/libpng12 -I/usr/include/libxml2 -I/usr/include/libsoup-2.4 -I/usr/include/dbus-1.0 -I/usr/lib64/dbus-1.0/include  
-TWITUX_LIBS = -L/usr/lib64 -L/lib64 -lsexy -lxml2 -lcanberra-gtk -lcanberra -lsoup-2.4 -lnotify -lgtk-x11-2.0 -lgdk-x11-2.0 -latk-1.0 -lgio-2.0 -lpangoft2-1.0 -lgdk_pixbuf-2.0 -lpangocairo-1.0 -lcairo -lpango-1.0 -lfreetype -lz -lfontconfig -lgmodule-2.0 -ldbus-glib-1 -ldbus-1 -lgobject-2.0 -lglib-2.0  
+TWITUX_LIBS = -L/usr/lib -L/lib64 -lsexy -lxml2 -lcanberra-gtk -lcanberra -lsoup-2.4 -lnotify -lgtk-x11-2.0 -lgdk-x11-2.0 -latk-1.0 -lgio-2.0 -lpangoft2-1.0 -lgdk_pixbuf-2.0 -lpangocairo-1.0 -lcairo -lpango-1.0 -lfreetype -lz -lfontconfig -lgmodule-2.0 -ldbus-glib-1 -ldbus-1 -lgobject-2.0 -lglib-2.0  
 USE_NLS = yes
 VERSION = 0.69
 WARN_CFLAGS = -Wall -Wmissing-prototypes -Wnested-externs -Wpointer-arith -Wno-sign-compare 
 WARN_CXXFLAGS = -g -O2 -Wall -Wno-unused 
 XGETTEXT = /usr/bin/xgettext
-abs_builddir = /programs/src/twitux/src
-abs_srcdir = /programs/src/twitux/src
-abs_top_builddir = /programs/src/twitux
-abs_top_srcdir = /programs/src/twitux
+abs_builddir = /projects/gtk/twitux/src
+abs_srcdir = /projects/gtk/twitux/src
+abs_top_builddir = /projects/gtk/twitux
+abs_top_srcdir = /projects/gtk/twitux
 ac_ct_CC = gcc
 ac_ct_CXX = g++
 ac_ct_F77 = 
@@ -247,8 +247,8 @@ host_vendor = suse
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = $(SHELL) /programs/src/twitux/install-sh
-libdir = /usr/lib64
+install_sh = $(SHELL) /projects/gtk/twitux/install-sh
+libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
 localstatedir = ${prefix}/var
