--- a/data/Makefile
+++ b/data/Makefile
@@ -62,13 +62,13 @@ svgiconDATA_INSTALL = $(INSTALL_DATA)
 DATA = $(desktop_DATA) $(glade_DATA) $(icon_DATA) $(schemas_DATA) \
 	$(svgicon_DATA)
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /programs/src/twitux/missing --run aclocal-1.10
+ACLOCAL = ${SHELL} /projects/gtk/twitux/missing --run aclocal-1.10
 ALL_LINGUAS = 
-AMTAR = ${SHELL} /programs/src/twitux/missing --run tar
+AMTAR = ${SHELL} /projects/gtk/twitux/missing --run tar
 AR = ar
-AUTOCONF = ${SHELL} /programs/src/twitux/missing --run autoconf
-AUTOHEADER = ${SHELL} /programs/src/twitux/missing --run autoheader
-AUTOMAKE = ${SHELL} /programs/src/twitux/missing --run automake-1.10
+AUTOCONF = ${SHELL} /projects/gtk/twitux/missing --run autoconf
+AUTOHEADER = ${SHELL} /projects/gtk/twitux/missing --run autoheader
+AUTOMAKE = ${SHELL} /projects/gtk/twitux/missing --run automake-1.10
 AWK = gawk
 CATALOGS = 
 CATOBJEXT = .gmo
@@ -155,7 +155,7 @@ LIBTWITUX_LIBS = -lxml2 -lgtk-x11-2.0 -lgdk-x11-2.0 -latk-1.0 -lgio-2.0 -lpangof
 LN_S = ln -s
 LTLIBOBJS = 
 MAINT = #
-MAKEINFO = ${SHELL} /programs/src/twitux/missing --run makeinfo
+MAKEINFO = ${SHELL} /projects/gtk/twitux/missing --run makeinfo
 MKDIR_P = /bin/mkdir -p
 MSGFMT = /usr/bin/msgfmt
 MSGFMT_OPTS = -c
@@ -187,10 +187,10 @@ VERSION = 0.69
 WARN_CFLAGS = -Wall -Wmissing-prototypes -Wnested-externs -Wpointer-arith -Wno-sign-compare 
 WARN_CXXFLAGS = -g -O2 -Wall -Wno-unused 
 XGETTEXT = /usr/bin/xgettext
-abs_builddir = /programs/src/twitux/data
-abs_srcdir = /programs/src/twitux/data
-abs_top_builddir = /programs/src/twitux
-abs_top_srcdir = /programs/src/twitux
+abs_builddir = /projects/gtk/twitux/data
+abs_srcdir = /projects/gtk/twitux/data
+abs_top_builddir = /projects/gtk/twitux
+abs_top_srcdir = /projects/gtk/twitux
 ac_ct_CC = gcc
 ac_ct_CXX = g++
 ac_ct_F77 = 
@@ -219,8 +219,8 @@ host_vendor = suse
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = $(SHELL) /programs/src/twitux/install-sh
-libdir = /usr/lib64
+install_sh = $(SHELL) /projects/gtk/twitux/install-sh
+libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
 localstatedir = ${prefix}/var
