I am implement url decoding for Twitux messages.  I am still working on fixing Twitux DM dialog as well but I am having issues with Twitter's *wink-wink* 'API'.  This is my first time working directly with their API so I find myself working on GNOME & GTK areas more often since I am far more familiar with.  But my work is coming along nicely though I am still hoping to get time & sleep that will allow me to begin my deep coding on alacast.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -68,7 +68,7 @@ am_twitux_OBJECTS = $(am__objects_1) twitux-main.$(OBJEXT) \
 	twitux-parser.$(OBJEXT) twitux-preferences.$(OBJEXT) \
 	twitux-send-message-dialog.$(OBJEXT) twitux-spell.$(OBJEXT) \
 	twitux-spell-dialog.$(OBJEXT) twitux-ui-utils.$(OBJEXT) \
-	twitux-lists-dialog.$(OBJEXT) twitux-tweet-list.$(OBJEXT) \
+	twitux-lists-dialog.$(OBJEXT) twitux-tweet-list.$(OBJEXT)
 twitux_OBJECTS = $(am_twitux_OBJECTS)
 am__DEPENDENCIES_1 =
 twitux_DEPENDENCIES = $(top_builddir)/libtwitux/libtwitux.la \
@@ -291,7 +291,6 @@ twitux_SOURCES = \
 	twitux-network.c		twitux-network.h		\
 	twitux-parser.c			twitux-parser.h			\
 	twitux-preferences.c		twitux-preferences.h		\
-	twitux-url-encoding.c		twitux-url-encoding.h		\
 	twitux-send-message-dialog.c	twitux-send-message-dialog.h	\
 	twitux-spell.c			twitux-spell.h			\
 	twitux-spell-dialog.c		twitux-spell-dialog.h		\
