--- a/src/Makefile
+++ b/src/Makefile
@@ -90,13 +90,13 @@ DIST_SOURCES = $(am__twitux_SOURCES_DIST)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /projects/gtk/twitux/missing --run aclocal-1.10
+ACLOCAL = ${SHELL} /projects/gtk/g-greet/missing --run aclocal-1.10
 ALL_LINGUAS = 
-AMTAR = ${SHELL} /projects/gtk/twitux/missing --run tar
+AMTAR = ${SHELL} /projects/gtk/g-greet/missing --run tar
 AR = ar
-AUTOCONF = ${SHELL} /projects/gtk/twitux/missing --run autoconf
-AUTOHEADER = ${SHELL} /projects/gtk/twitux/missing --run autoheader
-AUTOMAKE = ${SHELL} /projects/gtk/twitux/missing --run automake-1.10
+AUTOCONF = ${SHELL} /projects/gtk/g-greet/missing --run autoconf
+AUTOHEADER = ${SHELL} /projects/gtk/g-greet/missing --run autoheader
+AUTOMAKE = ${SHELL} /projects/gtk/g-greet/missing --run automake-1.10
 AWK = gawk
 CATALOGS = 
 CATOBJEXT = .gmo
@@ -183,7 +183,7 @@ LIBTWITUX_LIBS = -lxml2 -lgtk-x11-2.0 -lgdk-x11-2.0 -latk-1.0 -lgio-2.0 -lpangof
 LN_S = ln -s
 LTLIBOBJS = 
 MAINT = #
-MAKEINFO = ${SHELL} /projects/gtk/twitux/missing --run makeinfo
+MAKEINFO = ${SHELL} /projects/gtk/g-greet/missing --run makeinfo
 MKDIR_P = /bin/mkdir -p
 MSGFMT = /usr/bin/msgfmt
 MSGFMT_OPTS = -c
@@ -215,10 +215,10 @@ VERSION = 0.69
 WARN_CFLAGS = -Wall -Wmissing-prototypes -Wnested-externs -Wpointer-arith -Wno-sign-compare 
 WARN_CXXFLAGS = -std=gnu++0x -Wall -Wextra -Wformat=2 -Wswitch-default -Wswitch-enum -O3 -L/lib64 -L/usr/lib64 -L/usr/lib -L/lib -I/usr/include -Wall -Wno-unused 
 XGETTEXT = /usr/bin/xgettext
-abs_builddir = /projects/gtk/twitux/src
-abs_srcdir = /projects/gtk/twitux/src
-abs_top_builddir = /projects/gtk/twitux
-abs_top_srcdir = /projects/gtk/twitux
+abs_builddir = /projects/gtk/g-greet/src
+abs_srcdir = /projects/gtk/g-greet/src
+abs_top_builddir = /projects/gtk/g-greet
+abs_top_srcdir = /projects/gtk/g-greet
 ac_ct_CC = /usr/bin/gcc
 ac_ct_CXX = g++
 ac_ct_F77 = 
@@ -247,7 +247,7 @@ host_vendor = suse
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = $(SHELL) /projects/gtk/twitux/install-sh
+install_sh = $(SHELL) /projects/gtk/g-greet/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
