--- a/po/Makefile.in
+++ b/po/Makefile.in
@@ -159,13 +159,13 @@ mostlyclean:
 clean: mostlyclean
 
 distclean: clean
-	rm -f Makefile Makefile.in POTFILES stamp-it
+	rm -f Makefile POTFILES stamp-it
 	rm -f *.mo *.msg *.cat *.cat.m *.gmo
 
 maintainer-clean: distclean
 	@echo "This command is intended for maintainers to use;"
 	@echo "it deletes files that may require special tools to rebuild."
-	rm -f Makefile.in
+	#rm -f Makefile.in
 
 dist distdir: $(DISTFILES)
 	dists="$(DISTFILES)"; \
