I am working making spell checking accessible when button2 and the context menu key are pressed.  I am also implementing an undo stack when sending a message so you can undo deleting characters, though I have just started to implement this.  This commit also includes some fixes to the po Makefile that was causing circular reference errors.:

--- a/po/Makefile
+++ b/po/Makefile
@@ -229,7 +229,7 @@ Makefile POTFILES: stamp-it
 	  $(MAKE) stamp-it; \
 	fi
 
-stamp-it: Makefile $(top_builddir)/config.status POTFILES
+stamp-it: $(top_builddir)/config.status
 	cd $(top_builddir) \
 	  && CONFIG_FILES=$(subdir)/Makefile CONFIG_HEADERS= CONFIG_LINKS= \
 	       $(SHELL) ./config.status
