--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -11,7 +11,7 @@
 data/twitux.desktop.in
 data/twitux.schemas.in
 
-src/twitux-about.c
+src/about.c
 src/twitux-app.c
 src/twitux-hint.c
 src/twitux-main.c
