I have clean-up most of the references to the old project, especially its timeline, now that I have a name I need to write a script & apply for a source attribute for greet-tweet-know.  Most this I should be abould to with a script but I also want to convert it to using libgladeui & not the half hack that's being used now.:

--- a/data/Makefile
+++ b/data/Makefile
@@ -255,9 +255,9 @@ glade_DATA = \
 	lists_dlg.xml
 
 icondir = $(datadir)/icons/hicolor/48x48/apps
-icon_DATA = twitux.png
+icon_DATA = greet-tweet-know.png
 svgicondir = $(datadir)/icons/hicolor/scalable/apps
-svgicon_DATA = twitux.svg
+svgicon_DATA = greet-tweet-know.svg
 EXTRA_DIST = \
 	$(glade_DATA)		\
 	$(icon_DATA)		\
