--- a/data/Makefile
+++ b/data/Makefile
@@ -150,8 +150,8 @@ LDFLAGS = -L/lib64 -L/usr/lib64 -L/usr/lib -L/lib
 LIBOBJS = 
 LIBS = -L/lib64 -L/usr/lib64 -L/usr/lib -L/lib
 LIBTOOL = $(SHELL) $(top_builddir)/libtool
-LIBTWITUX_CFLAGS = @LIBTWITUX_CFLAGS@
-LIBTWITUX_LIBS = @LIBTWITUX_LIBS@
+LIBGREET_TWEET_KNOW_CFLAGS = 
+LIBGREET_TWEET_KNOW_LIBS = 
 LN_S = ln -s
 LTLIBOBJS = 
 MAINT = #
@@ -180,8 +180,8 @@ SED = /bin/sed
 SET_MAKE = 
 SHELL = /bin/sh
 STRIP = strip
-TWITUX_CFLAGS = @TWITUX_CFLAGS@
-TWITUX_LIBS = @TWITUX_LIBS@
+GREET_TWEET_KNOW_CFLAGS = -D_REENTRANT -DORBIT2=1 -pthread -I/usr/include/pango-1.0 -I/usr/include/glib-2.0 -I/usr/lib64/glib-2.0/include -I/usr/include/gtk-2.0 -I/usr/lib64/gtk-2.0/include -I/usr/include/atk-1.0 -I/usr/include/cairo -I/usr/include/pixman-1 -I/usr/include/freetype2 -I/usr/include/libpng12 -I/usr/include/libxml2 -I/usr/include/libsoup-2.4 -I/usr/include/dbus-1.0 -I/usr/lib64/dbus-1.0/include -I/usr/include/libglade-2.0 -I/usr/include/gconf/2 -I/usr/include/orbit-2.0 -I/usr/include/gnome-keyring-1  
+GREET_TWEET_KNOW_LIBS = -L/usr/lib -L/lib64 -lsexy -lsoup-2.4 -lnotify -lglade-2.0 -lcanberra-gtk -lcanberra -lgtk-x11-2.0 -lgdk-x11-2.0 -latk-1.0 -lgio-2.0 -lpangoft2-1.0 -lgdk_pixbuf-2.0 -lpangocairo-1.0 -lcairo -lpango-1.0 -lfreetype -lz -lfontconfig -lgmodule-2.0 -lxml2 -lgconf-2 -lgnome-keyring -ldbus-glib-1 -ldbus-1 -lgobject-2.0 -lglib-2.0  
 USE_NLS = yes
 VERSION = 0.1.0.1
 WARN_CFLAGS = -Wall -Wmissing-prototypes -Wnested-externs -Wpointer-arith -Wno-sign-compare 
