--- a/help/greet-tweet-know.omf.in
+++ b/help/greet-tweet-know.omf.in
@@ -4,6 +4,6 @@
     <subject category="GNOME|Applications|Internet"/>
     <type>user's guide</type>
     <relation seriesid="0feaf6bd-0768-7724-07f1-6c20eae543c310"/>
-    <rights type="GNU FDL" license.version="1.1" holder="Brian Pepple"/>
+    <rights type="GNU FDL" license.version="1.1" holder="Kaity G. B."/>
   </resource>
 </omf>
