Tweets brought to you *from Greet-Tweet-Know*.  Greet-Tweet-Know is now an official Twitter client so when it sends your Tweets they'll show up as being 'from Greet-Tweet-Know'.  I also implimented spell checking via both right clicking and using the keyboard's 'context menu' key.  I have done a lot of other things, they're in our ChangeLog.  I'd rather be programming ;-), plus I've ditz out & can't remember every thing I've done I'm just uber happy that my tweets & uber hopefully other's will now show that they've come 'from Greet-Tweet-Know'.  This lil thing really does feel good.:

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -556,6 +556,7 @@ maintainer-clean-generic:
 clean: clean-am
 
 clean-am: clean-binPROGRAMS clean-generic clean-libtool mostlyclean-am
+	-rm -rf ./$(DEPDIR)
 
 distclean: distclean-am
 	-rm -rf ./$(DEPDIR)
