Adding combined view.
I am creating a 'combined view' which will combine friends tweets, dms, & @ replies into one single view.  dms & @ replies will be highlighted differently so they can be pick out from regular tweets.  I am also working on adding a libnotify that will automatically send sound & etc notifications when a dm or @ reply is recieved reguardless of which view's selected.  Of course these notifications will be optional & the sounds customizable

While doing this I am trying to make sure these sounds go through to alsa, esd, or even the internal speaker.

I am also in the uber early stages of creating a 'friends manager' that will make it easy to see who's following you that you're not following & visa-versa.  It will let you easily add and/or remove friends directly from that dialog.

Committed on: 2009-03-24 @ 03:51:51 AM

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -16,7 +16,8 @@ glade_DATA = 				\
 	prefs_dlg.xml			\
 	send_message_dlg.xml		\
 	spell_dlg.xml			\
-	lists_dlg.xml
+	friends_manager.xml		\
+	followers_dlg.xml
 
 icondir = $(datadir)/icons/hicolor/48x48/apps
 icon_DATA = greet-tweet-know.png
